--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
     <div class="container">
-        <p>{{ site.title }}&copy; {{ sjte.time | date: '%y'}}</p>
-        <p>{{ site.email}}</p>
+        <p>{{ site.title }}&copy; {{ site.time | date: '%Y' }}</p>
+        <p>{{ site.email }}</p>
     </div> 
 </footer>
 
