--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,4 @@
 {% include head.html %}
-{% include header.html %}
-
-<div class="main-content">
-<div class="container">
+<h1>{{page.title}}</h1>
 {{ content }}
-</div>
-</div>
-
 {% include footer.html %}
-
