--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -1,3 +1,10 @@
----
-layout: default
----
+{% include head.html %}
+{% include header.html %}
+
+<div class="main-content">
+<div class="container">
+{{ content }}
+</div>
+</div>
+
+{% include footer.html %}
